--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
 	<link rel="stylesheet" type="txt/css" href="style.css">
 </head>
 <body>
-	
+	<div class="wrapper">
+
+		<!-- hero -->
+		<header class="header">
+			<div class="navigation">
+				<div class="header-logo">Header Logo</div>
+				<ul class="header-links">
+					<li class="header-link header-link-one">
+						<a href="#">header link one</a>
+					</li>
+					<li class="header-link header-link-two">
+						<a href="#">header link two</a>
+					</li>
+					<li class="header-link header-link-three">
+						<a href="#">header link three</a>
+					</li>
+				</ul>
+			</div>
+			<div class="hero">
+				<div class="hero-text">
+					<h1 class="hero-title">This website is awesome</h1>
+					<p class="hero-para">
+						This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+					</p>
+				</div>
+				<div class="hero-placeholder">
+					this is a placeholder for an image
+				</div>
+			</div>
+		</header>
+		
+		<!-- main content -->
+		<div class="main">
+			
+		</div>
+	</div>
 </body>
 <footer></footer>
 </html>
