--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
 	<title>Landing Page</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="txt/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<div class="wrapper">
-
 		<!-- hero -->
 		<header class="header">
 			<div class="navigation">
@@ -36,12 +35,39 @@
 				</div>
 			</div>
 		</header>
-		
 		<!-- main content -->
 		<div class="main">
-			
+			<h1 class="main-title">Some random information</h1>
+			<div class="card-container">
+				<div class="card-image-container"></div>
+				<div class="card-text">
+					this is some subtext under an illustration or image
+				</div>
+			</div>
 		</div>
+		<!-- quote section -->
+		<blockquote class="quote-container">
+			<p class="quote-text">
+				As the Father loved Me, I also have loved you; abide in My love. 10 If you keep My commandments, you will abide in My love, just as I have kept My Father’s commandments and abide in His love.
+			</p>
+			<footer class="quote-author">Joshua</footer>
+		</blockquote>
+		<!-- call to action -->
+		<div class="cta-container">
+			<div class="cta-text">
+				<h1 class="cta-title">Call to action! It's time!</h1>
+				<p class="cta-para">
+					Sign up for our product by clicking that button right over there!
+				</p>
+			</div>
+			<div class="cta-button">
+				Sign Up
+			</div>
+		</div>
+		<!-- footer section -->
+		<footer class="footer">
+			Copyright &copy; <a class="link" href="#">@dejanpls</a>
+		</footer>
 	</div>
 </body>
-<footer></footer>
 </html>
