--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 					<p class="hero-para">
 						This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
 					</p>
+					<div class="hero-button">
+						<a href="#">Sign Up</a>
+					</div>
 				</div>
 				<div class="hero-placeholder">
 					this is a placeholder for an image
