Style info section

--- a/index.html
+++ b/index.html
@@ -39,19 +39,39 @@
 			</div>
 		</header>
 		<!-- main content -->
-		<div class="main">
+		<div class="info-container">
 			<h1 class="main-title">Some random information</h1>
-			<div class="card-container">
-				<div class="card-image-container"></div>
-				<div class="card-text">
-					this is some subtext under an illustration or image
+			<div class="cards">
+				<div class="card">
+					<div class="card-image-container"></div>
+					<div class="card-text">
+						this is some subtext under an illustration or image
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image-container"></div>
+					<div class="card-text">
+						this is some subtext under an illustration or image
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image-container"></div>
+					<div class="card-text">
+						this is some subtext under an illustration or image
+					</div>
+				</div>
+				<div class="card">
+					<div class="card-image-container"></div>
+					<div class="card-text">
+						this is some subtext under an illustration or image
+					</div>
 				</div>
 			</div>
 		</div>
 		<!-- quote section -->
 		<blockquote class="quote-container">
 			<p class="quote-text">
-				As the Father loved Me, I also have loved you; abide in My love. 10 If you keep My commandments, you will abide in My love, just as I have kept My Father’s commandments and abide in His love.
+				If you keep My commandments, you will abide in My love, just as I have kept My Father’s commandments and abide in His love.
 			</p>
 			<footer class="quote-author">Joshua</footer>
 		</blockquote>
