Style cta section and footer section

--- a/index.html
+++ b/index.html
@@ -70,26 +70,32 @@
 		</div>
 		<!-- quote section -->
 		<blockquote class="quote-container">
-			<p class="quote-text">
-				If you keep My commandments, you will abide in My love, just as I have kept My Father’s commandments and abide in His love.
-			</p>
-			<footer class="quote-author">Joshua</footer>
+			<div class="quote">
+				<p class="quote-text">
+					If you keep My commandments, you will abide in My love, just as I have kept My Father’s commandments and abide in His love.
+				</p>
+				<footer class="quote-author">&#8212; Joshua</footer>
+			</div>
 		</blockquote>
 		<!-- call to action -->
 		<div class="cta-container">
-			<div class="cta-text">
-				<h1 class="cta-title">Call to action! It's time!</h1>
-				<p class="cta-para">
-					Sign up for our product by clicking that button right over there!
-				</p>
-			</div>
-			<div class="cta-button">
-				Sign Up
+			<div class="cta">
+				<div class="cta-text">
+					<h1 class="cta-title">Call to action! It's time!</h1>
+					<p class="cta-para">
+						Sign up for our product by clicking that button right over there!
+					</p>
+				</div>
+				<div class="cta-button">
+					<a href="#">Sign Up</a>
+				</div>
 			</div>
 		</div>
 		<!-- footer section -->
 		<footer class="footer">
-			Copyright &copy; <a class="link" href="#">@dejanpls</a>
+			<p class="footer-text">
+				Made with ❤️ by<a class="link" href="#"> @dejanpls</a>
+			</p>
 		</footer>
 	</div>
 </body>
